# PaddleAD

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: greetings.yml  pylint.yml
ppad/: __init__.py
ppad/models/: efficient_ad.py
src/paddlead/: __init__.py
